--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,25 @@
     <groupId>com.stringbuilder.spring</groupId>
     <artifactId>hi.spring.road</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <properties>
+        <junit.version>4.11</junit.version>
+    </properties>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>dom4j</groupId>
+            <artifactId>dom4j</artifactId>
+            <version>1.6.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.4</version>
+        </dependency>
+    </dependencies>
 
 </project>
