--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,11 @@
             <artifactId>javassist</artifactId>
             <version>3.12.0.GA</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-asm</artifactId>
+            <version>3.1.4.RELEASE</version>
+        </dependency>
 
     </dependencies>
 
